--- a/social-tiles.html
+++ b/social-tiles.html
@@ -1,3 +1,7 @@
+<!--
+	Author: Amirreza Shayesteh Far
+	Author URL: http://amirrezaa.ir
+-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -154,3 +158,7 @@
 	</ul>
 </body>
 </html>
+<!--
+	Author: Amirreza Shayesteh Far
+	Author URL: http://amirrezaa.ir
+-->
